@@ -1,0 +1,7 @@
+
+SFX A Y 4
+SFX A   0     e         n
+SFX A   0     e         t
+SFX A   0     e         h
+
+ONLYINCOMPOUND o
