@@ -1,0 +1,5 @@
+
+SFX A Y 3
+SFX A   0     e         n
+SFX B   0     e         t
+SFX A   0     e         h
